--- a/playground.ipynb
+++ b/playground.ipynb
@@ -132,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius 7.0 is: 153.93804002589985\n"
+     ]
+    }
+   ],
    "source": [
     "from math import pi\n",
     "r = float(input (\"Input the radius of the circle : \"))\n",
@@ -375,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
